--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,11 @@
     ],
     "typeRoots": [
       "./node_modules/@types",
-      "./src/types"
     ],   
   },
   "include": [
-    "src"
+    "src",
+    "index.d.ts"
   ],
   "exclude": [
     "index.ts",
