--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whms",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "types": "lib",
@@ -8,8 +8,13 @@
     "start": "ts-node ./index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "benny123tw",
   "license": "MIT",
+  "files": [
+    "index.js",
+    "index.d.ts",
+    "lib"
+  ],
   "devDependencies": {
     "@types/node": "^14.14.41"
   },
