--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whms",
-  "version": "1.0.6",
+  "version": "1.0.6a",
   "description": "A package simplfy WHMS upload process",
   "main": "index.js",
   "types": "lib",
