--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whms",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A package simplfy WHMS upload process",
   "main": "index.js",
   "types": "lib",
@@ -27,6 +27,7 @@
     "@types/node": "^14.14.41"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "moment": "^2.29.1"
   }
 }
